--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.ejs": "html",
         "vector": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "set": "cpp",
+        "cstddef": "cpp"
     }
 }
